# c-python

./: CMakeLists.txt  README.md
useEmbed/: CMakeLists.txt  great_module.py  useEmbed.cpp
useEmbedString/: CMakeLists.txt  useEmbedString.cpp
usePythonScript/: CMakeLists.txt  usePythonScript.cpp
